--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -28,7 +28,7 @@
     <ion-item>
       <ion-button (click)="CreateRecord()" [disabled]="productForm.invalid">
         <ion-icon size="small" slot="icon-only" name="add"></ion-icon>
-        &nbsp;Create Record
+        &nbsp;Crear pedido
       </ion-button>
     </ion-item>
 
