--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -3,6 +3,9 @@
     <ion-title>
       Registro de Productos
     </ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="main"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
