--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -7,7 +7,7 @@
 <ion-content>
 
   <section>
-    <ion-button expand="block" href="home">Administrador de productos</ion-button>
+    <ion-button expand="block" href="home" router-direction="right">Administrador de productos</ion-button>
   </section>
 
 </ion-content>
