--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -55,6 +55,12 @@
           <ion-icon size="small" slot="icon-only" name="trash"></ion-icon>
 
         </ion-button>
+
+        <ion-button shape="round" color="danger" size="small" href="{{item.Address}}">
+          <ion-icon size="small" slot="icon-only" name="trash"></ion-icon>
+
+        </ion-button>
+
       </ion-card-content>
     </span>
     <ng-template #elseBlock>
